--- a/content/styles/main.css
+++ b/content/styles/main.css
@@ -17,9 +17,6 @@
   position: relative;
   left: 70px;
 }
-.main button {
-  background-color: #f7f7f7;
-}
 .main .dual {
   display: flex;
   flex-direction: row;
@@ -39,4 +36,9 @@
 .main .dual .buttons button {
   background-color: #f7f7f7;
   height: 40px;
+  z-index: 10;
+  cursor: pointer;
+}
+.main .dual .buttons .selections {
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
