--- a/content/styles/main.scss
+++ b/content/styles/main.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .main {
     background-color: #28622f;
     width: 300px;
@@ -38,9 +42,23 @@
                 cursor: pointer;
             }
             .selections {
+                margin-top: 10px;
                 width: 100%;
-                .row {
-                    
+                display: grid;
+                gap: 6px;
+                grid-template-columns: repeat(3, 1fr);
+                .item {
+                    background-color: #f7f7f7;
+                    height: 40px;
+                    z-index: 10;
+                    cursor: pointer;
+                    text-align: center;
+                    img {
+                        height: 100%;
+                        object-fit: cover;
+                        background-position: center;
+                    }
+                    border: 2px solid black;
                 }
             }
         }
